test/integration/progs/errors/string_get_1.blu
s := "hello"
print s[0]
print s[4]
print s[5]
